@@ -2264,6 +2264,11 @@ cplus_demangle_type (struct d_info *di)
 			     cplus_demangle_type (di), NULL);
 	  can_subst = 1;
 	  break;
+
+	case 'a':
+	  /* auto */
+	  ret = d_make_name (di, "auto", 4);
+	  break;
 	  
 	case 'f':
 	  /* 32-bit decimal floating point */
