@@ -1,3 +1,7 @@
+2012-03-20  Jason Merrill  <jason@redhat.com>
+
+	* cp-demangle.c (cplus_demangle_type): Handle 'auto'.
+
 2012-01-26  Jakub Jelinek  <jakub@redhat.com>
 
 	* make-relative-prefix.c (make_relative_prefix_1): Avoid warning
